src/test/deca/codegen/invalid/execution_error_divide_by_0_float.deca
// Description:
//    Test division by 0.0 error
//
// Result:
//[Begin Result]
//Error: Overflow during arithmetic operation
//[End Result]
//
// History:
//    created on 09/01/2025
{

    float a = 2 / 0.0;
}